# propshop

./: .copier-answers.yml  .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.ps1  update.ps1
.github/workflows/: bump.yml  changerelease.yml  codeql-analysis.yml  codeql.yml  main.yml  minimum.yml  publish.yml  release.yml  sphinx.yml
.tooling/: cicd_setup.sh  setup.ps1  update.ps1
.tools/: pyproject.toml
.tools/requirements/: requirements.txt  requirements_both.txt  requirements_docs.txt  requirements_project.txt
.tools/scripts/: Update-Template.ps1
.tools/setup/: setup.ps1  update.ps1
docs/: conf.py
examples/: example.ipynb  example.py
src/propshop/: __init__.py  api.py  configs.py  defaults.toml  library.py  materials.py
tests/: pyproject.toml  test_propshop.py
tooling/: cicd_setup.sh  setup.ps1  update.ps1
