[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "propshop"
requires-python = ">=3.10"
dependencies = [ "dynaconf>=3.1.12", "pydantic>=1.10.6", "pandas>=1.5.3", "openpyxl>=3.1.1", "pyarrow>=11.0.0", "scipy>=1.10.1",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+propshop@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/propshop"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "DTZ", "EM", "ERA", "FBT", "INP001", "ISC", "PD013", "PD901", "PGH003", "RET", "TCH", "TRY003", "F821", "S101", "T201",]
unfixable = [ "F601",]

[tool.ruff.per-file-ignores]
"tests/**" = [ "ARG001", "S101",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
