[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "propshop"
requires-python = ">=3.10"
dependencies = [ "dynaconf>=3.1.12", "pydantic>=1.10.6", "pandas>=2.0.0", "openpyxl>=3.1.1", "pyarrow>=11.0.0", "scipy>=1.10.1",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+propshop@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/propshop"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "D402", "DTZ", "E501", "EM", "ERA", "FBT", "F841", "G0", "INP001", "ISC", "PD013", "PD901", "PD011", "PGH003", "PLR0913", "PLW2901", "RET", "S301", "TCH", "TRY003", "W2", "B018", "F821", "S101", "T201",]
unfixable = [ "F601",]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"tests/**" = [ "ARG001", "S101",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
